# Reimagine

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent-macros/: Cargo.toml
crates/agent-macros/src/: agent_tool.rs  lib.rs
crates/agent-macros/tests/: compile.rs
crates/agent-macros/tests/pass/: valid_async_tool.rs
crates/agent-macros/tests/ui/: invalid_signature.rs  invalid_signature.stderr  missing_metadata.rs  missing_metadata.stderr
crates/agent-provider/: Cargo.toml
crates/agent-provider/src/: anthropic.rs  backend.rs  config.rs  error.rs  lib.rs  openai_compatible.rs  rig.rs  translation.rs
crates/agent-provider/src/translation/: listing.rs  request.rs  response.rs  streaming.rs  tools.rs
crates/agent-provider/tests/: error_mapping.rs  fake_backend.rs  provider_config.rs  rig_backend.rs  stream_anthropic.rs  stream_openai.rs  translation_anthropic.rs  translation_openai.rs
crates/agent/src/: context.rs  error.rs  event.rs  event_adapter.rs  ids.rs  lib.rs  loop.rs  mode.rs  permissions.rs  policy.rs  provider.rs  registry.rs  report.rs  session.rs  tool.rs  turn.rs
crates/app-host/: Cargo.toml
crates/app-host/assets/: worker-catalog-root.json
crates/app-host/src/: agent_provider.rs  agent_service.rs  app_host.rs  artifact_access.rs  dto.rs  error.rs  inference.rs  inference_backend.rs  lib.rs  model_acquisition_service.rs  model_conversion.rs  model_service.rs  node_catalog.rs  policy.rs  proposal.rs  readiness.rs  run_observation.rs  run_workflow.rs  services.rs  tools.rs  worker_management.rs  workflow_service.rs  workspace.rs
crates/app-host/src/dto/: agent.rs  artifacts.rs  compute_profile.rs  health.rs  model_acquisition.rs  models.rs  nodes.rs  runs.rs  workflows.rs
crates/app-host/src/inference/: candidate.rs  compose.rs  image_source_resolver.rs  resolve.rs  resolver.rs  selection.rs  switch.rs  worker.rs
crates/app-host/src/tools/: workspace_tool.rs
crates/app-host/tests/: agent_service_turn.rs  agent_tools.rs  candle_smoke.rs  run_workflow.rs  service_shell.rs  worker_inventory.rs  worker_switch.rs
crates/axum-host/: Cargo.toml
crates/axum-host/src/: api.rs  bootstrap.rs  cli.rs  dto.rs  error.rs  lib.rs  main.rs  recorder.rs  router.rs  routes.rs  server.rs  state.rs
crates/axum-host/src/api/: artifacts.rs  compute_profile.rs  health.rs  models.rs  nodes.rs  workflows.rs
crates/axum-host/src/routes/: runs.rs  workflows.rs
crates/axum-host/tests/: burn_real_e2e.rs  e2e.rs  real_e2e.rs  sdxl_workflows.rs
crates/backend-worker-host/: Cargo.toml
crates/backend-worker-host/src/: adapter.rs  authority.rs  error.rs  launch.rs  leases.rs  lib.rs  store_paths.rs  supervisor.rs  testing.rs
crates/backend-worker-host/src/catalog/: builder.rs  client.rs  compatibility.rs  error.rs  mod.rs  state.rs  tuf.rs
crates/backend-worker-host/src/install/: error.rs  mod.rs  promote.rs  self_check.rs  staging.rs
crates/backend-worker-host/src/inventory/: error.rs  mod.rs  records.rs  store.rs
crates/backend-worker-host/src/package/: builder.rs  error.rs  extract.rs  manifest.rs  mod.rs
crates/backend-worker-host/tests/: adapter.rs  catalog_chain.rs  catalog_pinning.rs  dry_run_release.rs  supervisor.rs
crates/backend-worker-host/tests/fixtures/: fake_backend_worker.rs  server.rs
crates/backend-worker-protocol/: Cargo.toml
crates/backend-worker-protocol/src/: cancellation.rs  codec.rs  control.rs  direction.rs  error.rs  frame.rs  handshake.rs  identity.rs  lib.rs  lifecycle.rs  progress.rs  request.rs  response.rs  worker_profile.rs
crates/backend-worker-protocol/tests/: codec.rs  direction.rs  fake_worker.rs  handshake.rs  lifecycle.rs
crates/backend-worker-protocol/tests/fixtures/: fake_backend_worker.rs
crates/config/: Cargo.toml
crates/config/src/: app_config.rs  atomic_write.rs  document.rs  error.rs  handle.rs  inference_backend.rs  key.rs  lib.rs  paths.rs  report.rs  store.rs
crates/config/tests/: config_store.rs
crates/inference/: Cargo.toml
crates/inference-backends/burn/: Cargo.toml
crates/inference-backends/burn-worker/: Cargo.toml  build.rs
crates/inference-backends/burn-worker/src/: lib.rs  main.rs  (+4 more)
crates/inference-backends/candle/: Cargo.toml
crates/inference-core/: Cargo.toml
crates/inference-core/src/: backend.rs  bridge.rs  capability.rs  diagnostic.rs  error.rs  execution_value.rs  lib.rs  registry.rs  request.rs  resolver.rs  resources.rs  response.rs  runtime.rs
crates/inference/src/: artifact_publisher.rs  backend.rs  backend_registry.rs  backend_selection.rs  bridge.rs  cancellation.rs  capability.rs  diagnostic.rs  error.rs  execution_value.rs  executor.rs  executors.rs  inference_error.rs  invocation.rs  latent_content.rs  latent_space.rs  lib.rs  node_context.rs  operation.rs  profile.rs  registry.rs  request.rs  resolver.rs  resources.rs  response.rs  router.rs  routing_request.rs  testing.rs
crates/inference/tests/: e2e.rs  resolver_source_tests.rs  resources.rs
crates/model-acquisition/: Cargo.toml
crates/model-acquisition/src/: config.rs  error.rs  hf.rs  lib.rs  paths.rs  report.rs  request.rs  staging.rs  timestamp.rs
crates/model-acquisition/tests/: real_hf.rs
crates/model-manager/: Cargo.toml
crates/model-manager/src/: classify.rs  error.rs  identity.rs  lib.rs  manifest.rs  resolve.rs  scan.rs  store.rs  verify.rs
crates/model-manager/tests/: burn_package_import.rs  classification.rs  identity.rs  manifest_schema.rs  manifest_store.rs  manifest_validation.rs  resolve.rs  scanner.rs  verify.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: aliases.rs  builtins.rs  lib.rs  registry.rs
crates/nodes/tests/: builtin_catalog.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: artifacts.rs  cancellation.rs  clock.rs  consumer_index.rs  error.rs  events.rs  executor.rs  handle.rs  lib.rs  node_context.rs  progress.rs  resources.rs  run_inputs.rs  run_session.rs  runner.rs  scheduler.rs  snapshot.rs  stage_runner.rs  store.rs  value.rs  value_store.rs
crates/runtime/tests/: runtime_service.rs  runtime_values.rs
(+354 files in other folders)
