[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/config",
    "crates/model-manager",
    "crates/nodes",
    "crates/runtime",
    "crates/agent",
    "crates/agent-macros",
    "crates/app-host",
    "crates/agent-provider",
    "crates/axum-host",
    "crates/inference",
    "crates/inference-core",
    "crates/inference-backends/candle",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["Preference"]
description = "Reimagine"


[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
glob-match = "0.2"
sha2 = "0.10"
async-trait = "0.1"
axum = "0.8"
proc-macro2 = "1"
quote = "1"
syn = "2"
schemars = "0.8"
trybuild = "1"
tower = "0.5"
rig-core = { version = "0.31", default-features = false, features = ["reqwest-middleware-rustls"] }
candle-core = { version = "0.10", default-features = false, features = ["metal"] }
