[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/config",
    "crates/model-manager",
    "crates/nodes",
    "crates/runtime",
    "crates/agent",
    "crates/agent-macros",
    "crates/app-host",
    "crates/agent-provider",
    "crates/axum-host",
    "crates/inference",
    "crates/inference-backends/candle",
    "crates/inference-backends/burn",
    "crates/plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["Preference"]
description = "Reimagine"
license = "GPL-3.0-or-later"


[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
tokio = "1"
tokio-util = { version = "0.7", features = ["io"] }
glob-match = "0.2"
sha2 = "0.10"
async-trait = "0.1"
axum = "0.8"
proc-macro2 = "1"
quote = "1"
syn = "2"
schemars = "0.8"
trybuild = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = { version = "0.31", default-features = false, features = ["reqwest-middleware-rustls"] }
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
burn-ndarray = { version = "0.21", default-features = false, features = ["std"] }
burn-tensor = { version = "0.21", default-features = false, features = ["std"] }
tokenizers = "0.21"
image = "0.25"
tempfile = "3"
