[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/config",
    "crates/model-manager",
    "crates/model-acquisition",
    "crates/nodes",
    "crates/runtime",
    "crates/agent",
    "crates/agent-macros",
    "crates/app-host",
    "crates/agent-provider",
    "crates/axum-host",
    "crates/inference",
    "crates/inference-backends/candle",
    "crates/inference-backends/burn",
    "crates/inference-backends/burn-worker",
    "crates/plugin",
    "crates/backend-worker-protocol",
    "crates/backend-worker-host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["Preference"]
description = "Reimagine"
license = "GPL-3.0-or-later"


[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
tokio = "1"
tokio-util = { version = "0.7", features = ["io"] }
glob-match = "0.2"
sha2 = "0.10"
async-trait = "0.1"
axum = "0.8"
proc-macro2 = "1"
quote = "1"
syn = "2"
schemars = "0.8"
trybuild = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = { version = "0.31", default-features = false, features = ["reqwest-middleware-rustls"] }
candle-core = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
burn-nn = { version = "0.21", default-features = false, features = ["std"] }
burn-flex = { version = "0.21", default-features = false, features = ["std"] }
burn-wgpu = { version = "0.21", default-features = false, features = ["std"] }
burn-tensor = { version = "0.21", default-features = false, features = ["std"] }
burn-core = { version = "0.21", default-features = false, features = ["std"] }
burn-store = { version = "0.21", default-features = false, features = ["std", "safetensors"] }
tokenizers = "0.21"
image = "0.25"
tempfile = "3"
hf-hub = { version = "1.0.0-rc.1", default-features = false, features = ["rustls-tls", "blocking"] }
ed25519-dalek = "2"
tar = "0.4"
flate2 = "1"
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
