[package]
name = "reimagine-agent-macros"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "printing", "extra-traits"] }

[dev-dependencies]
reimagine-agent = { path = "../agent" }
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
trybuild = { workspace = true }
