[package]
name = "reimagine-agent-provider"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reimagine-agent = { path = "../agent" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
rig-core = { workspace = true, default-features = false, features = ["reqwest-middleware-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6"
