[package]
name = "reimagine-app-host"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
reimagine-agent = { path = "../agent" }
reimagine-backend-worker-host = { path = "../backend-worker-host" }
reimagine-backend-worker-protocol = { path = "../backend-worker-protocol" }
reimagine-config = { path = "../config" }
reimagine-core = { path = "../core" }
reimagine-inference = { path = "../inference" }
reimagine-inference-candle = { path = "../inference-backends/candle" }
reimagine-model-acquisition = { path = "../model-acquisition" }
reimagine-model-manager = { path = "../model-manager" }
reimagine-nodes = { path = "../nodes" }
reimagine-plugin = { path = "../plugin" }
reimagine-runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync", "time"] }
hf-hub = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
