[package]
name = "reimagine-axum-host"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
reimagine-app-host = { path = "../app-host" }
reimagine-core = { path = "../core" }
reimagine-runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
http-body-util = "0.1"
reimagine-agent = { path = "../agent" }
reimagine-config = { path = "../config" }
reimagine-model-manager = { path = "../model-manager" }
reimagine-nodes = { path = "../nodes" }
