[package]
name = "reimagine-backend-worker-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "fake-backend-worker"
path = "tests/fixtures/fake_backend_worker.rs"
