[package]
name = "reimagine-inference-core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
reimagine-core = { path = "../core" }
serde = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }