[package]
name = "reimagine-inference"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
reimagine-core = { path = "../core" }
reimagine-inference-core = { path = "../inference-core" }
serde = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = "0.1"

[features]
default = []
testing = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
