[package]
name = "reimagine-inference"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
reimagine-core = { path = "../core" }
reimagine-plugin = { path = "../plugin" }
serde = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = "0.1"

[features]
default = []
testing = []

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync"] }
