[package]
name = "reimagine-model-manager"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reimagine-config = { path = "../config" }
reimagine-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "fs"] }
serde_json = { workspace = true }
