[package]
name = "reimagine-inference-burn-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "reimagine-inference-burn-worker"
path = "src/main.rs"

[lib]
name = "reimagine_inference_burn_worker"
path = "src/lib.rs"

[dependencies]
reimagine-inference-burn = { path = "../burn", default-features = false }
reimagine-backend-worker-protocol = { path = "../../backend-worker-protocol" }
reimagine-core = { path = "../../core" }
reimagine-inference = { path = "../../inference" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = ["wgpu"]
wgpu = ["reimagine-inference-burn/wgpu"]
flex = ["reimagine-inference-burn/flex"]

[dev-dependencies]
axum = { workspace = true }
http-body-util = "0.1"
image = { workspace = true }
reimagine-agent = { path = "../../agent" }
reimagine-app-host = { path = "../../app-host" }
reimagine-axum-host = { path = "../../axum-host" }
reimagine-backend-worker-host = { path = "../../backend-worker-host" }
reimagine-config = { path = "../../config" }
reimagine-runtime = { path = "../../runtime" }
reimagine-model-manager = { path = "../../model-manager" }
safetensors = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
