[package]
name = "reimagine-inference-burn"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
burn-ndarray = { workspace = true }
burn-tensor = { workspace = true }
reimagine-core = { path = "../../core" }
reimagine-inference = { path = "../../inference" }
reimagine-plugin = { path = "../../plugin" }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
