[package]
name = "reimagine-inference-burn"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Default to GPU compute via the burn-wgpu stack
# (Metal on Apple Silicon, Vulkan on Linux/Windows, CubeCL CPU
# fallback within wgpu when no GPU adapter is available).
default = ["wgpu"]
# CPU compute via burn-flex (SIMD + rayon + Apple AMX). Use for
# CI, CPU-only hosts, and debug builds.
flex = ["dep:burn-flex"]
# GPU compute via burn-wgpu (wgpu + CubeCL).
wgpu = ["dep:burn-wgpu"]

# Note: `burn-ndarray` remains a non-optional dependency because it
# is the legacy compile-time base used by the V1 operation/store
# layer. Real tensor execution in V1 still goes through burn-ndarray
# because GPU/Flex forward passes (CLIP, diffusion, VAE) are
# delivered in later issues (burn/08f, burn/10, burn/11). burn/13
# only adds the feature gates, the device enum, and the profile
# probing path; it does not migrate any concrete operation to the
# GPU/Flex path.
[dependencies]
async-trait = { workspace = true }
burn-core = { workspace = true }
burn-ndarray = { workspace = true }
burn-tensor = { workspace = true }
burn-flex = { workspace = true, optional = true }
burn-wgpu = { workspace = true, optional = true }
reimagine-core = { path = "../../core" }
reimagine-inference = { path = "../../inference" }
reimagine-plugin = { path = "../../plugin" }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
