[package]
name = "reimagine-inference-candle"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
reimagine-core = { path = "../../core" }
reimagine-inference = { path = "../../inference" }
reimagine-plugin = { path = "../../plugin" }
candle-core = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
