[package]
name = "reimagine-inference-candle"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
safetensors = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
reimagine-core = { path = "../../core" }
reimagine-inference = { path = "../../inference" }
reimagine-plugin = { path = "../../plugin" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
image = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3"
