[package]
name = "reimagine-inference-candle"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
safetensors = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
reimagine-core = { path = "../../core" }
reimagine-inference = { path = "../../inference" }
reimagine-plugin = { path = "../../plugin" }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
image = { workspace = true }
tokenizers = { workspace = true }

# Candle GPU backends are platform-specific. The workspace deps above are
# intentionally feature-free so each backend crate can opt in only on
# platforms where the feature is meaningful. Keeping `metal` here would
# leak `objc2` into the Linux/Windows dependency graph and break CI.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { workspace = true, features = ["metal", "accelerate"] }
candle-nn = { workspace = true, features = ["metal"] }
candle-transformers = { workspace = true, features = ["metal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tempfile = { workspace = true }
